Fix some linting issues (#154)
* build all

* Lint

* remove var

* fix